--- a/style.css
+++ b/style.css
@@ -25,7 +25,13 @@ header {
 
 #container > div {
   height: 100px;
-  background-color: rgb(110, 99, 239);
   width: 100%;
   height: 80%;
+  display: flex;
+}
+
+#colors-container div {
+  outline: 2px solid rgb(232, 6, 6);
+  width: 20%;
+  height: 100%;
 }
